# stack_ai_model

./: .gitignore  Dockerfile  README.md  config.docker.yaml  config.example.yaml  docker-compose.yml  init_trend_miner.sql  pyproject.toml
tests/: __init__.py  test_dedupe.py  test_signature.py
trend_miner/: __init__.py  __main__.py  cli.py  config.py  models.py
trend_miner/collectors/: __init__.py  rss.py
trend_miner/processing/: __init__.py  bertopic_model.py  dedupe.py  scoring.py  topic_aggregate.py  url_normalize.py
trend_miner/storage/: __init__.py  file_store.py  pg_store.py
trend_miner/utils/: __init__.py  hashing.py  time.py
